--- a/index.html
+++ b/index.html
@@ -1,54 +1,158 @@
-
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Titulo de pestaña -->
+    <title>Selocambio</title>
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="/assets/img/favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="/assets/img/favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/assets/img/favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/assets/img/favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/assets/img/favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/assets/img/favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/assets/img/favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/assets/img/favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/img/favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/assets/img/favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/img/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/assets/img/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/img/favicon/favicon-16x16.png"
+    />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="/assets/img/favicon/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
+  <!-- Code injected by live-server -->
+</head>
 
-<style>
+  <style>
+    * {
+      font-family: sans-serif;
+      font-weight: bold;
+    }
 
-*{
-    font-family: sans-serif;
-}
+    a {
+      text-decoration: none;
+    }
 
-a{
-    text-decoration: none;
-}
+    img {
+      padding: 48px 0 48px 0;
+      width: 240px;
+    }
+  </style>
 
-img{
-    padding: 20px;
-    width: 250px;
-}
-</style>
-
-<center>
-<img src="./img/logo.png">
-<br>
-<br>
-<a href="https://meet.google.com/mjs-zvgd-mnb">> REUNION <</a>
-<br>
-<br>
-# TABLEROS #
-<br>
-<a href="https://trello.com/b/7Hq3bIQF/selocambiocom-proyecto">> GENERAL <</a>
-<br>
-<a href="https://trello.com/b/fVUeBady/selocambiocom-backlog">> BACKLOG <</a>
-<br>
-<a href="https://trello.com/b/mBNoGC2e/selocambiocom-actividades">> ACTIVIDADES <</a>
-<br>
-<br>
-# PROYECTO #
-<br>
-<a href="https://selocambio.netlify.app/">> FRONT-END DEL PROYECTO <</a>
-<br>
-<a href="https://backend-selocambio-production.up.railway.app/oferta/obtener">> BACK-END DEL PROYECTO <</a>
-<br>
-<br>
-# DOCUMENTOS #
-<br>
-<a href="https://docs.google.com/document/d/1YKEG-4LGOJbYZNWcCsTClHYWwWSJsDG_m_N2dmzTEYs/edit">> GUIA DE TAREAS <</a>
-<br>
-<a href="https://drive.google.com/drive/folders/11tkFhkEjWK35yivztd5JTiTQ_-v0gDxO">> DRIVE DEL PROYECTO <</a>
-<br>
-<a href="https://docs.google.com/document/d/1HOUBL0wkIpnCgv96NyI0xlcrmfvaxlsxJfdsY1Y7Oo4/edit#">> NORMAS, ACUERDOS Y REGLAS <</a>
-<br>
-<br>
-
-</center>
+  <center>
+    <a href="https://selocambio.netlify.app/">
+      <img src="../assets/img/logo.png" />
+    </a>
+    <br>
+    # PROYECTO #
+    <br>
+    <br>
+    <a href="https://selocambio.netlify.app/">> Front-End <</a>
+    <br>
+    <a
+      href="https://backend-selocambio-production.up.railway.app/oferta/obtener"
+      >> Back-End <</a
+    >
+    <br>
+    <br>
+    <br>
+    # DOCUMENTOS #
+    <br>
+    <br>
+    <a
+      href="https://docs.google.com/document/d/1YKEG-4LGOJbYZNWcCsTClHYWwWSJsDG_m_N2dmzTEYs/edit"
+      >> Guia de Tareas <</a
+    >
+    <br>
+    <a
+      href="https://drive.google.com/drive/folders/11tkFhkEjWK35yivztd5JTiTQ_-v0gDxO"
+      >> Drive <</a
+    >
+    <br>
+    <a
+      href="https://docs.google.com/document/d/1HOUBL0wkIpnCgv96NyI0xlcrmfvaxlsxJfdsY1Y7Oo4/edit#"
+      >> Normas y Acuerdos <</a
+    >
+    <br>
+    <br>
+    <br>
+    # TABLEROS #
+    <br>
+    <br>
+    <a href="https://trello.com/b/7Hq3bIQF/selocambiocom-proyecto"
+      >> General <</a
+    >
+    <br>
+    <a href="https://trello.com/b/fVUeBady/selocambiocom-backlog"
+      >> Backlog <</a
+    >
+    <br>
+    <a href="https://trello.com/b/mBNoGC2e/selocambiocom-actividades"
+      >> Actividades <</a
+    >
+    <br>
+    <br>
+    <br>
+  </center>
 </html>
